# MLPR2

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/processed/: iu_xray_metadata.labels.txt
outputs/baselines/: binary_baseline_metrics.json  multilabel_text_baseline_metrics.json
outputs/final/: binary_gated_fusion.joblib  final_metrics.json  labels.json  multilabel_gated_fusion.joblib
outputs/neural/: neural_comparison_metrics.json
outputs/neural_final/: binary_neural_fusion.joblib  clinicalbert_indication_metrics.json  labels.json  multilabel_neural_fusion.joblib  neural_final_metrics.json
src/ml_pr/: __init__.py
src/ml_pr/data/: dataset.py  iu_xray.py  labels.py  prepare_iu_xray.py  projection.py
src/ml_pr/features/: image.py  text.py
src/ml_pr/inference/: __init__.py  neural_predictor.py  predictor.py
src/ml_pr/models/: gated_sklearn.py  multimodal.py  neural_sklearn.py
src/ml_pr/service/: __init__.py  app.py
src/ml_pr/training/: baselines.py  evaluate.py  external_fusion_comparison.py  external_torchxrayvision_baseline.py  finetune_text_encoder.py  neural_comparison.py  train.py  train_final.py  train_neural_final.py
