[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-pr"
version = "0.1.0"
description = "Educational multimodal chest X-ray diagnosis project"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.8,<1.10",
    "scipy>=1.11",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
